1) Fixed some of the spacing issues 2) adjusted a line of code on the button triggers so that a change to the birthplace/hs button options would trigger an info box update.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .toggle-button {
-	width: 150px;
+	width: 120px;
 	margin-left: 0px;
 	margin-right: 0px;
 
